blame: Fix m_view not cleared when hiding tooltip

We remove the event filter but don't clear the view so the next time
when the tooltip shows, there is no event filter on it.

BUG: 450144
FIXED-IN: 23.04